--- a/synnex-mvc-app-1/Properties/launchSettings.json
+++ b/synnex-mvc-app-1/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7288;http://localhost:5236",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "dotnetRunMessages": true
     },
